--- a/src/app/components/register-admin/register-admin.component.html
+++ b/src/app/components/register-admin/register-admin.component.html
@@ -13,14 +13,14 @@
         <div class="card register-card">
           <div class="row no-gutters">
             <div class="col-md-5">
-              <img src="https://i.pinimg.com/originals/f7/75/35/f775354d8f317259e6cabf72766be458.jpg" alt="register" class="register-card-img">
+              <img src="https://www.ecommercemag.fr/Assets/Img/BREVE/2019/7/340822/Comment-marques-investissent-commerce--F.jpg" alt="register" class="register-card-img">
             </div>
             <div class="col-md-7">
               <div class="card-body">
                 <div class="brand-wrapper">
                   <p class="register-card-title">
-                  <img src="https://cdn-icons-png.flaticon.com/512/1567/1567073.png" alt="logo" class="logo" style="width: 80px; height: 80px;">
-                  REGISTRO
+                  <img src="https://www.pngmart.com/files/7/Cart-PNG-Clipart.png" alt="logo" class="logo" style="width: 80px; height: 80px;">
+                  REGISTRO ADMINISTRADOR
                   </p>
                 </div>
                 <p class="register-card-description">Ingrese sus datos</p>
@@ -40,21 +40,18 @@
                   </div>
                   
                   <div class="form-group">
-                    <label for="address" class="sr-only">Dirección</label>
-                    <input type="text" name="address" id="address" formControlName="address" class="form-control" placeholder="Dirección">
+                    <label for="username" class="sr-only">Username</label>
+                    <input type="text" name="username" id="username" formControlName="username" class="form-control" placeholder="Username">
                  </div>
+                  
                   <div class="form-group">
-                    <label for="last_name" class="sr-only">Dirección 2</label>
-                    <input type="text" name="address2" id="address2" formControlName="address2" class="form-control" placeholder="Dirección 2">
-                  </div>
-                  <div class="form-group">
-                    <label for="last_name" class="sr-only">Distrito</label>
-                    <input type="text" name="district" id="district" formControlName="district" class="form-control" placeholder="Distrito">
+                    <label for="last_name" class="sr-only">Contraseña</label>
+                    <input type="text" name="password" id="password" formControlName="password" class="form-control" placeholder="Contraseña">
                   </div>
                 
                     <input name="register" id="register"  class="btn btn-block register-btn mb-4" type="button"  value="Registrar">
                   </form>
-                  <p class="register-card-footer-text">¿Tiene una cuenta? <a href="login-admin" class="text-reset">Inicie Sesión Aquí</a></p>
+                  <p class="register-card-footer-text">¿Tiene una cuenta? <a href="login" class="text-reset">Inicie Sesión Aquí</a></p>
                   
               </div>
             </div>
