--- a/src/app/components/login-admin/login-admin.component.html
+++ b/src/app/components/login-admin/login-admin.component.html
@@ -25,17 +25,17 @@
                 </p>
               </div>
               <p class="login-card-description">Acceder a su cuenta</p>
-              <form [formGroup]="userForm">
+              <form [formGroup]="userForm" (ngSubmit)="login()">
                   <div class="form-group">
                     <label for="username" class="sr-only">Username</label>
-                    <input type="text" name="username" id="username" class="form-control" formControlName="username" placeholder="username">
+                    <input type="text" name="username" id="username" class="form-control" formControlName="username" placeholder="Nombre de Usuario">
                   </div>
                   <div class="form-group">
                     <label for="password" class="sr-only">Password</label>
-                    <input type="password" name="password" id="password" class="form-control"  placeholder="***********">
+                    <input type="password" name="password" id="password" class="form-control" formControlName="password"  placeholder="***********">
                   </div>
                   <a >
-                  <input name="login" id="login" class="btn btn-block login-btn mb-4" type="button"  value="Login" > </a>
+                  <input name="login" id="login" class="btn btn-block login-btn mb-4" type="submit" value="Login" > </a>
                 </form>
                 <p class="login-card-footer-text">¿No tiene una cuenta? <a href="register" class="text-reset">Registre Aquí</a></p>
                 
