Adición y modificación de los componentes

--- a/src/app/components/login-admin/login-admin.component.html
+++ b/src/app/components/login-admin/login-admin.component.html
@@ -20,8 +20,8 @@
             <div class="card-body">
               <div class="brand-wrapper">
                 <p class="login-card-title">
-                <img src="https://indyme.com/wp-content/uploads/2020/11/shopping-cart-icon.png" alt="logo" class="logo" style="width: 80px; height: 80px;">
-                E-COMMERCE
+                <img src="assets/logo_trendy.png" alt="logo" class="logo" style="width: 80px; height: 80px;">
+                TRENDY STORE - ADMINISTRADOR
                 </p>
               </div>
               <p class="login-card-description">Acceder a su cuenta</p>
