--- a/src/app/components/register-admin/register-admin.component.html
+++ b/src/app/components/register-admin/register-admin.component.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="register-admin.component.css">
-  </head>
+</head>
   <body>
     <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
       <div class="container">
@@ -19,7 +19,7 @@
               <div class="card-body">
                 <div class="brand-wrapper">
                   <p class="register-card-title">
-                  <img src="https://www.pngmart.com/files/7/Cart-PNG-Clipart.png" alt="logo" class="logo" style="width: 80px; height: 80px;">
+                  <img src="assets/logo_trendy.png" alt="logo" class="logo" style="width: 80px; height: 80px;">
                   REGISTRO ADMINISTRADOR
                   </p>
                 </div>
