--- a/src/app/components/dashboard/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-index/dashboard-index.component.html
@@ -1,22 +1,25 @@
 <div class="grid grid-cols-12 gap-4 lg:gap-8">
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-    <mat-icon class="text-accent mb-5">favorite_border</mat-icon>
-    <h6>Favorites</h6>
-    <div class="count mb-3 mt-5">10</div>
-    <a [routerLink]="'/dashboard/saved-items'" class="font-semibold" mat-flat-button color="warn">View All</a>
-  </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-    <mat-icon class="text-accent mb-5">sync</mat-icon>
-    <h6>Number of ongoing orders</h6>
-    <div class="count mb-3 mt-5">10</div>
-    <a [routerLink]="'/dashboard/orders'" class="font-semibold" mat-flat-button color="warn">View All</a>
-  </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-    <mat-icon class="text-accent mb-5">task_alt</mat-icon>
-    <h6>Completed orders</h6>
-    <div class="count mb-3 mt-5">10</div>
-    <a [routerLink]="'/dashboard/orders'" class="font-semibold" mat-flat-button color="warn">View All</a>
-  </div>
+	<div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
+	  <img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
+	  <br>
+	  <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR MARCA</h6>
+	  <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por marca estadísticamente</div>
+	  <a  class="button" mat-flat-button color="primary" >Ver</a>
+	</div>
+	<div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
+	  <img src="https://cdn-icons-png.flaticon.com/512/3309/3309960.png" alt="Logo" class="center" />
+	  <br>
+	  <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h6>
+	  <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por ciudades estadísticamente</div>
+	  <a  class="button" mat-flat-button color="accent" >Ver</a>
+	</div>
+	<div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
+	  <img src="https://i.pinimg.com/originals/a6/1e/48/a61e481ee91b33b02e5bfdc5638bb1df.png" alt="Logo" class="center" />
+	  <br>
+	  <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h6>
+	  <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por género estadísticamente</div>
+	  <a  class="button" mat-flat-button color="warn" >Ver</a>
+	</div>
 </div>
 <div class="mt-8">
   <h5 class="mb-1 font-normal">Latest Orders</h5>
