--- a/src/app/components/dashboard/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/dashboard/dashboard-layout/dashboard-layout.component.html
@@ -14,10 +14,10 @@
       <div>
         <div class="container">
           <div class="grid grid-cols-12 gap-8" >
-            <div class="col-span-3 hidden xl:block"  style="background-color: #ffffff">
+            <div class="col-span-3 hidden xl:block">
               <div class="py-5 min-h-screen">
                 <div class="rounded-md border overflow-hidden h-full">
-                  <div class="user text-center bg-primary py-10 px-5">
+                  <div class="user text-center bg-primary py-10 px-5" style="background-color: #2E9084;">
                     <img class="ml-auto mr-auto" src="https://cdn-icons-png.flaticon.com/128/1177/1177568.png" alt="admin" style="width:50px;" />
                     <h4 class="text-white mt-3">ADMINISTRADOR</h4>
                   </div>
