--- a/src/app/components/app-home/admin-home/admin-home.component.html
+++ b/src/app/components/app-home/admin-home/admin-home.component.html
@@ -8,7 +8,7 @@
         </h1>
       </div>
       <div class="col-span-12 md:col-span-6 lg:col-span-5 xxl:col-span-6 ll-image mt-10 md:mt-0">
-        <img class="ml-auto" src="assets/images/logo_trendy.png" />
+        <img class="ml-auto" src="assets/logo_trendy.png" />
       </div>
     </div>
 
@@ -26,7 +26,7 @@
           <h5 class="font-medium text-black">INICIAR SESIÓN</h5>
           <br>
           <button class="w-full text-white py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-          type="button" style="background-color: #B53B55;">
+          type="button" style="background-color: #B53B55;" [routerLink]="['/auth/logins']">
            LOGIN
           </button>
         </div>
