--- a/src/app/components/auth-session/auth-admin/login/login.component.html
+++ b/src/app/components/auth-session/auth-admin/login/login.component.html
@@ -11,7 +11,7 @@
 <div class="login__page" style="width: 100% ; height: 100% ;" [style.background-image]="'url(https://s3.amazonaws.com/arc-wordpress-client-uploads/infobae-wp/wp-content/uploads/2018/08/10150715/tendencias-cuidado-ropa-destacada.jpg)'">
     <div class="login__row min-h-screen" style="width: 100% ; height: 100% ;">
       <div class="login__hero flex flex-col justify-center items-center py-10 px-4 sm:px-8 xl:px-20 text-white" >
-        <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/images/logo_trendy.png" alt="Trendy" /></a>
+        <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/logo_trendy.png" alt="Trendy" /></a>
         <h2 class="text-center mt-6">BIENVENIDO A TRENDY STORE</h2>
       </div>
       <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent" style="background-color: #2f948f;">
