Uniendo componentes correspondientes

--- a/src/app/components/app-home/provider-home/provider-home.component.html
+++ b/src/app/components/app-home/provider-home/provider-home.component.html
@@ -17,25 +17,18 @@
     <div class="flex flex-wrap">
       <div class="lg:w-1/2 lg:order-last">
         <a>
-          <img src="https://media.istockphoto.com/photos/online-shopping-and-payment-man-using-tablet-with-shopping-cart-icon-picture-id1206800961?k=20&m=1206800961&s=612x612&w=0&h=hcPoUKhWtzHXR3PIAHVgPVZDZaO7R8yZ1wNPkUSsgwU=" alt="About" />
+          <img src="https://scontent.flpb2-2.fna.fbcdn.net/v/t31.18172-8/11030162_387516828086742_325720393478572883_o.jpg?stp=dst-jpg_p180x540&_nc_cat=105&ccb=1-5&_nc_sid=e3f864&_nc_ohc=usH4uXhcF4wAX_fZaxP&_nc_ht=scontent.flpb2-2.fna&oh=00_AT9MX7U_fUV-lVF4glD21gL1dQOaYNFGlq9J1gMo17yvwg&oe=62709A5D" alt="About" />
         </a>
       </div>
       <div class="lg:w-1/2 lg:pr-10 mt-8 lg:mt-0 ll-about__text">
-        <h2 class="font-medium" style="text-align: center;">ADMINISTRADOR</h2>
+        <h2 class="font-medium" style="text-align: center;">PROVEEDOR</h2>
         <div class="mt-12">
-          <h5 class="font-medium text-black">INICIAR SESIÓN</h5>
+          <h4 class="font-medium text-black" style="text-align: center;">INICIAR SESIÓN</h4>
+          <h5 class="mt-1 text-black">Para registrar sus productos es necesario que inicie la sesión correspondiente</h5>
           <br>
           <button class="w-full text-white py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-          type="button" style="background-color: #B53B55;" [routerLink]="['/auth/logins']">
+          type="button" style="background-color: #BD6C54;" [routerLink]="['/providerdashboard']">
            LOGIN
-          </button>
-        </div>
-        <div class="mt-8">
-          <h5 class="font-medium text-black">REGISTRO</h5>
-          <br>
-          <button class="w-full text-white py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-          type="button" style="background-color: #B53B55;" [routerLink]="['/auth/signups']">
-           REGISTRO
           </button>
         </div>
       </div>
