--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -1,7 +1,7 @@
 <div class="login__page"  >
   <div class="login__row min-h-screen">
     <div class="login__hero flex flex-col justify-center items-center py-10 px-4 sm:px-8 xl:px-20 text-white"[style.background-image]="'url(https://img.freepik.com/foto-gratis/ropa-moda-tienda-boutique_1150-14701.jpg?w=2000)'">
-      <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/images/logo_trendy.png" style="width: 500px; height: 150px;" alt="Trendy" /></a>
+      <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/logo_trendy.png" style="width: 500px; height: 150px;" alt="Trendy" /></a>
     </div>
     <div class="login__content flex flex-col justify-center bg-accent" style="background-color: #2f6394;">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
