--- a/src/app/components/auth-session/auth-admin/login/login.component.html
+++ b/src/app/components/auth-session/auth-admin/login/login.component.html
@@ -47,7 +47,7 @@
               <button
                 class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
                 type="button"
-                [routerLink]="['/dashboard']"
+                [routerLink]="['/admindashboard']"
               >
                 Iniciar sesión
               </button>
