--- a/src/app/components/auth-session/auth-provider/login/login.component.html
+++ b/src/app/components/auth-session/auth-provider/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="login__page" [style.background-image]="'url(https://fondosmil.com/fondo/8201.jpg)'">
   <div class="login__row min-h-screen">
     <div class="login__hero flex flex-col justify-center items-center py-10 px-4 sm:px-8 xl:px-20 text-white">
-      <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/images/logo_trendy.png" alt="Trendy" /></a>
+      <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/logo_trendy.png" alt="Trendy" /></a>
       <h2 class="text-center mt-6">BIENVENIDO A TRENDY STORE</h2>
     </div>
     <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent" style="background-color: #858C8E;">
@@ -37,7 +37,7 @@
             <button
               class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
               type="button"
-              [routerLink]="['/dashboard']"
+              [routerLink]="['/providerdashboard']"
             >
               Iniciar sesión
             </button>
