--- a/src/app/components/dashboard/dashboard-provider/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-layout/dashboard-layout.component.html
@@ -5,7 +5,7 @@
         <div class="container">
           <div class="flex items-center">
             <div class="flex items-center">
-              <a class="logo" [routerLink]="['']"><img src="assets/images/logo_trendy.png" alt="Logo" /></a>
+              <a class="logo" [routerLink]="['']"><img src="assets/logo_trendy.png" alt="Logo" /></a>
             </div>
           </div>
         </div>
@@ -17,9 +17,9 @@
             <div class="col-span-3 hidden xl:block">
               <div class="py-5 min-h-screen">
                 <div class="rounded-md border overflow-hidden h-full">
-                  <div class="user text-center bg-primary py-10 px-5" style="background-color: #2E9084;">
+                  <div class="user text-center py-10 px-5" style="background-color: #2E9084;">
                     <img class="ml-auto mr-auto" src="https://cdn-icons-png.flaticon.com/128/1177/1177568.png" alt="admin" style="width:50px;" />
-                    <h4 class="text-white mt-3">ADMINISTRADOR</h4>
+                    <h4 class="text-white mt-3">PROVEEDOR</h4>
                   </div>
                   <mat-nav-list class="_sidenav">
                     <a
@@ -52,6 +52,7 @@
                       ><mat-icon class="mr-2">article</mat-icon> Lista de proveedores</a
                     >
                     <a (click)="onLogout()" mat-list-item class="font-semibold text-gray-500 hover:text-primary"><mat-icon class="mr-2">logout</mat-icon> Cerrar sesión</a>
+                    <a><img src="assets/logo_trendy.png" alt="Logo" /></a>
                   </mat-nav-list>
                 </div>
               </div>
