Configurando rutas del proveedor y mejoras en la búsqueda de productos

--- a/src/app/components/app-home/provider-home/provider-home.component.html
+++ b/src/app/components/app-home/provider-home/provider-home.component.html
@@ -27,7 +27,7 @@
           <h5 class="mt-1 text-black">Para registrar sus productos es necesario que inicie la sesión correspondiente</h5>
           <br>
           <button class="w-full text-white py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-          type="button" style="background-color: #BD6C54;" [routerLink]="['/providerdashboard']">
+          type="button" style="background-color: #BD6C54;" [routerLink]="['/authprovider/login']">
            LOGIN
           </button>
         </div>
