--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -20,20 +20,6 @@
       <mat-expansion-panel [expanded]="advanceSearchExpanded">
         <div class="grid grid-cols-6 gap-6 mt-4">
           <div class="col-span-6 sm:col-span-3">
-            <input
-              type="text"
-              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-              placeholder="Start price"
-            />
-          </div>
-          <div class="col-span-6 sm:col-span-3">
-            <input
-              type="text"
-              class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md"
-              placeholder="End price"
-            />
-          </div>
-          <div class="col-span-6 sm:col-span-3">
             <select
               name="categories"
               class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
@@ -58,7 +44,7 @@
             </select>
           </div>
           <div class="col-span-6">
-            <button mat-flat-button color="accent">Apply filter</button>
+            <button mat-flat-button color="accent">Aplicar Filtro</button>
           </div>
         </div>
       </mat-expansion-panel>
