--- a/src/app/components/dashboard/dashboard-admin/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-products/dashboard-products.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="filter flex items-center mb-5">
-    <h5>Lista de productos</h5>
+  <div style="text-align: center;">
+    <h1>PRODUCTOS</h1>
   </div>
   <div>
     <div *ngIf="view === 'list'" class="table-inside">
