--- a/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
@@ -1,5 +1,16 @@
+
 <div>
-	<h5 class="mb-3 font-medium">LISTA DE PROVEEDORES</h5>
+	<div style="text-align: center;">
+		<h1 class="mb-3 font-medium">PROVEEDORES</h1>
+		
+	</div>
+	<div class="flex justify-between flex-wrap">
+		<h2 class="mb-3 font-medium">LISTA PROVEEDORES</h2> 
+		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
+		[routerLink]="['/authprovider/signup']" >
+			Agregar 
+		</button>
+	</div>	
 	<div class="table-inside">
 		<table class="order-table table-auto ltMd:responsive">
 			<thead>
