--- a/src/app/components/auth-session/auth-admin/login/login.component.html
+++ b/src/app/components/auth-session/auth-admin/login/login.component.html
@@ -12,49 +12,51 @@
     <div class="login__row min-h-screen" style="width: 100% ; height: 100% ;">
       <div class="login__hero flex flex-col justify-center items-center py-10 px-4 sm:px-8 xl:px-20 text-white" >
         <a [routerLink]="['']" class="w-48 inline-block"><img src="assets/logo_trendy.png" alt="Trendy" /></a>
-        <h2 class="text-center mt-6">BIENVENIDO A TRENDY STORE</h2>
+        <h2 class="text-center mt-6" style="font-size: 35px; ">BIENVENIDO A TRENDY STORE</h2>
       </div>
       <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent" style="background-color: #2f948f;">
         <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
           <form>
-            <h1 class="text-2xl font-bold">LOGIN - ADMINISTRADOR</h1>
+            <br>
+            <h1 class="text-2xl font-bold" style="font-size: 25px; text-align: center;">LOGIN - ADMINISTRADOR</h1>
             <div class="mb-4 mt-6">
-              <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="username"> Usuario </label>
+              <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="username"style="font-size: 15px;"> Usuario </label>
               <input
                 class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
                 id="username"
                 type="text"
-                placeholder="usuario"
+                placeholder="usuario" style="font-size: 15px;"
               />
             </div>
             <div class="mb-6 mt-6">
-              <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password"> Password </label>
+              <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password" style="font-size: 15px;"> Password </label>
               <input
                 class="text-sm bg-gray-100 appearance-none rounded w-250 py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
                 id="password"
                 type="password"
-                placeholder="password"
+                placeholder="password" style="font-size: 15px;"
               
               /> 
               <button
               >
               <mat-icon>remove_red_eye</mat-icon>
               </button>
-              
+              <br>
             </div>
            
             <div class="flex w-full mt-6">
+              <br>
               <button
                 class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
                 type="button"
-                [routerLink]="['/admindashboard']"
+                [routerLink]="['/admindashboard']" style="font-size: 15px;"
               >
                 Iniciar sesión
               </button>
-            </div>
+            </div>               
           </form>
           <div class="mt-4">
-            <a [routerLink]="['/']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Ir a la página principal</a>
+            <a [routerLink]="['/adminhome']"  class="text-gray-700 text-sm hover:text-accent inline-flex items-center" style="font-size: 15px;"><mat-icon class="h-4 w-4 leading-4 text-lg mr-2">keyboard_backspace</mat-icon>Ir a la página principal</a>
           </div>
         </div>
       </div>
