--- a/src/app/components/dashboard/dashboard-admin/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-index/dashboard-index.component.html
@@ -1,52 +1,76 @@
-<h3 class="mb-1 font-normal">Estadísticas</h3>
-<div class="grid grid-cols-12 gap-4 lg:gap-8">
 
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
-	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR MARCA</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por marca estadísticamente</div>
-    <a  class="button" mat-flat-button color="primary" >Ver</a>
-  </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://cdn-icons-png.flaticon.com/512/3309/3309960.png" alt="Logo" class="center" />
-	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por ciudades estadísticamente</div>
-    <a  class="button" mat-flat-button color="accent" >Ver</a>
-  </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://i.pinimg.com/originals/a6/1e/48/a61e481ee91b33b02e5bfdc5638bb1df.png" alt="Logo" class="center" />
-	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por género estadísticamente</div>
-    <a  class="button" mat-flat-button color="warn" >Ver</a>
-  </div>  
+<div>
+	<div style="text-align: center;">
+		<h1 class="mb-3 font-medium">ADMINISTRADOR</h1>
+		
+	</div>
+	<div class="flex justify-between flex-wrap">
+		<h2 class="mb-3 font-medium">LISTAADMINISTRADORES DEL SISTEMA</h2> 
+		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
+		[routerLink]="['/auth/signups']" >
+			Agregar 
+		</button>
+	</div>	
+	<div class="table-inside">
+		<table class="order-table table-auto ltMd:responsive">
+			<thead>
+				<tr class="border text-left">
+					<th>
+						<span class="text-gray-800">ID</span>
+					</th>
+					<th>
+						<span class="text-gray-800">NOMBRE</span>
+					</th>
+					<th>
+						<span class="text-gray-800">APELLIDO</span>
+					</th>
+	
+					<th>
+						<span class="text-gray-800">EMAIL</span>
+					</th>
+	
+					<th>
+						<span class="text-gray-800">USERNAME</span>
+					</th>
+					<th class="text-right"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr *ngFor="let order of orders" class="border">
+					<td>
+						<a class="text-primary" href="/">#{{order?.id}}</a>
+					</td>
+					<td>
+						{{order?.orderBy | titlecase }}
+					</td>
+					<td>
+						<span>{{order?.price}}</span>
+					</td>
+					<td>
+						<span>{{order?.created}}</span>
+					</td>
+					<td>
+						<div>
+							{{ order?.status | titlecase }}
+						</div>
+					</td>
+					<td class="text-right">
+						<button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
+							<mat-icon>more_vert</mat-icon>
+						</button>
+						<mat-menu #menu="matMenu" xposition="before">
+							<button mat-menu-item>
+								<mat-icon>dialpad</mat-icon>
+								<span>Editar</span>
+							</button>
+							<button mat-menu-item>
+								<mat-icon>delete</mat-icon>
+								<span>Delete</span>
+							</button>
+						</mat-menu>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
-
-<h3 class="mb-1 font-normal">LISTA</h3>
-<div class="grid grid-cols-12 gap-4 lg:gap-8">
-
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
-	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR MARCA</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por marca estadísticamente</div>
-    <a  class="button" mat-flat-button color="primary" >Ver</a>
-  </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://cdn-icons-png.flaticon.com/512/3309/3309960.png" alt="Logo" class="center" />
-	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por ciudades estadísticamente</div>
-    <a  class="button" mat-flat-button color="accent" >Ver</a>
-  </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://i.pinimg.com/originals/a6/1e/48/a61e481ee91b33b02e5bfdc5638bb1df.png" alt="Logo" class="center" />
-	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por género estadísticamente</div>
-    <a  class="button" mat-flat-button color="warn" >Ver</a>
-  </div>  
-</div>
-
