--- a/src/app/components/auth-session/auth-admin/login/login.component.html
+++ b/src/app/components/auth-session/auth-admin/login/login.component.html
@@ -16,14 +16,14 @@
       </div>
       <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent" style="background-color: #2f948f;">
         <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-          <form>
+          <form [formGroup]="userForm" (ngSubmit)="login()">
             <br>
             <h1 class="text-2xl font-bold" style="font-size: 25px; text-align: center;">LOGIN - ADMINISTRADOR</h1>
             <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="username"style="font-size: 15px;"> Usuario </label>
               <input
                 class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                id="username"
+                name="username" id="username" formControlName="username"
                 type="text"
                 placeholder="usuario" style="font-size: 15px;"
               />
@@ -32,7 +32,7 @@
               <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password" style="font-size: 15px;"> Password </label>
               <input
                 class="text-sm bg-gray-100 appearance-none rounded w-250 py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
-                id="password"
+                name="password" id="password" formControlName="password"
                 type="password"
                 placeholder="password" style="font-size: 15px;"
               
@@ -48,8 +48,8 @@
               <br>
               <button
                 class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-                type="button"
-                [routerLink]="['/admindashboard']" style="font-size: 15px;"
+                type="submit"
+                style="font-size: 15px;"
               >
                 Iniciar sesión
               </button>
