--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -7,6 +7,15 @@
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
         <form>
           <h1 class="text-2xl font-bold">AGREGAR PRODUCTO</h1>
+          <div class="mb-6 mt-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="codigo"> Código del producto </label>
+              <input
+              class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+              id="codigo"
+              type="number" min="1" step="any"
+              placeholder="Código"
+            />
+          </div>
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="nombre"> Nombre del producto</label>
             <input
@@ -16,6 +25,23 @@
               placeholder="Nombre"
             />
             <div class="mb-4 mt-6">
+              <label class="block text-gray-700 text-sm font-semibold mb-2" for="descripcion"> Descripción del producto </label>
+              <input
+                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                id="descripcion"
+                type="text"
+                placeholder="Descripción"
+              />
+              <div class="mb-4 mt-6">
+                <label class="block text-gray-700 text-sm font-semibold mb-2" for="stock"> Stock </label>
+                <input
+                  class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                  id="stock"
+                  type="number" min="1" step="any"
+                  placeholder="Stock"
+                />
+
+            <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="precio"> Precio (Bs.) </label>
               <input
                 class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
@@ -23,22 +49,32 @@
                 type="number" min="1" step="any"
                 placeholder="Precio"
               />
-              <div class="mb-4 mt-6">
-                <label class="block text-gray-700 text-sm font-semibold mb-2" for="descripcion"> Descripción del producto </label>
-                <input
-                  class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                  id="descripcion"
-                  type="text"
-                  placeholder="Descripción"
-                />
-                <div class="mb-6 mt-6">
-                  <label class="block text-gray-700 text-sm font-semibold mb-2" for="administrador"> Nombre del Administrador </label>
-                    <input 
-                      type="text" 
-                      class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
-                      list="browsers"
-                      placeholder="Nombre del administrador"/>
-                </div>
+              <div class="mb-6 mt-6">
+                <label class="block text-gray-700 text-sm font-semibold mb-2" for="color"> Color </label>
+                  <input 
+                    type="text" 
+                    class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
+                    list="browsers"
+                    placeholder="Color"/>
+                    <datalist id="browsers">
+                        <option>Color 1</option>
+                        <option>Color 2</option>
+                        <option>Color 3</option>
+                    </datalist>
+              </div>
+              <div class="mb-6 mt-6">
+                <label class="block text-gray-700 text-sm font-semibold mb-2" for="talla"> Talla </label>
+                  <input 
+                    type="text" 
+                    class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
+                    list="browsers"
+                    placeholder="Talla"/>
+                    <datalist id="browsers">
+                        <option>Talla 1</option>
+                        <option>Talla 2</option>
+                        <option>Talla 3</option>
+                    </datalist>
+              </div>
               <div class="mb-6 mt-6">
                 <label class="block text-gray-700 text-sm font-semibold mb-2" for="proveedor"> Nombre del proveedor </label>
                   <input 
@@ -60,6 +96,7 @@
               <button
                 class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
                 type="button"
+                [routerLink]="['/providerdashboard']"
               >
                Agregar Producto
               </button>
