--- a/src/app/components/dashboard/dashboard-provider/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-index/dashboard-index.component.html
@@ -4,49 +4,45 @@
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
 	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR MARCA</h6>
+    <h4 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR MARCA</h4>
     <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por marca estadísticamente</div>
     <a  class="button" mat-flat-button color="primary" >Ver</a>
   </div>
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://cdn-icons-png.flaticon.com/512/3309/3309960.png" alt="Logo" class="center" />
 	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h6>
+    <h4 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h4>
     <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por ciudades estadísticamente</div>
     <a  class="button" mat-flat-button color="accent" >Ver</a>
   </div>
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://i.pinimg.com/originals/a6/1e/48/a61e481ee91b33b02e5bfdc5638bb1df.png" alt="Logo" class="center" />
 	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h6>
+    <h4 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h4>
     <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por género estadísticamente</div>
     <a  class="button" mat-flat-button color="warn" >Ver</a>
   </div>  
 </div>
 
-<h3 class="mb-1 font-normal">LISTA</h3>
+
 <div class="grid grid-cols-12 gap-4 lg:gap-8">
 
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
+  <div class="col-span-6 md:col-span-4  rounded px-4 lg:px-8 py-8 lg:py-16">
+	
 	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR MARCA</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por marca estadísticamente</div>
-    <a  class="button" mat-flat-button color="primary" >Ver</a>
+    
   </div>
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://cdn-icons-png.flaticon.com/512/3309/3309960.png" alt="Logo" class="center" />
+	<img src="https://cdn-icons-png.flaticon.com/512/411/411720.png" alt="Logo" class="center" />
 	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR CIUDADES</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por ciudades estadísticamente</div>
+    <h4 style="text-align:center;">PRODUCTOS VENDIDOS</h4>
+    <div class="count mb-3 mt-5" style="text-align:center;">Lista de los productos más vendidos y su stock</div>
     <a  class="button" mat-flat-button color="accent" >Ver</a>
   </div>
-  <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
-	<img src="https://i.pinimg.com/originals/a6/1e/48/a61e481ee91b33b02e5bfdc5638bb1df.png" alt="Logo" class="center" />
+  <div class="col-span-6 md:col-span-4 rounded px-4 lg:px-8 py-8 lg:py-16">
+	
 	<br>
-    <h6 style="text-align:center;">PRODUCTOS MÁS VENDIDOS POR GÉNERO</h6>
-    <div class="count mb-3 mt-5" style="text-align:center;">Productos más vendidos por género estadísticamente</div>
-    <a  class="button" mat-flat-button color="warn" >Ver</a>
+   
   </div>  
 </div>
 
