--- a/src/app/components/auth-session/auth-admin/login/login.component.html
+++ b/src/app/components/auth-session/auth-admin/login/login.component.html
@@ -33,8 +33,7 @@
               <input
                 class="text-sm bg-gray-100 appearance-none rounded w-250 py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
                 name="password" id="password" formControlName="password"
-                type="password"
-                placeholder="password" style="font-size: 15px;"
+                type="password" placeholder="password" style="font-size: 15px;"
                 [type]="hide ? 'password':'text'"
               /> 
               <i class="material-icons" matSuffix (click)="hide = !hide">
