--- a/src/app/components/auth-session/auth-admin/signup/signup.component.html
+++ b/src/app/components/auth-session/auth-admin/signup/signup.component.html
@@ -1,5 +1,4 @@
-<head>
-  
+<head> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="signup.component.scss">
 </head>
@@ -12,7 +11,7 @@
       </div>
       <div class="login__content flex flex-col justify-center bg-accent" style="background-color: #d67787;">
         <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-          <form>
+          <form [formGroup]="newAdminForm" (ngSubmit)="addNewAdmin(newAdminForm.value)">
             <h1 class="text-2xl font-bold">REGISTRO - ADMINISTRADOR</h1>
             <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="nombre"> Nombre </label>
@@ -21,31 +20,41 @@
                 id="nombre"
                 type="text"
                 placeholder="Nombre"
+                formControlName="nombre"
               />
-              <div class="mb-4 mt-6">
-                <label class="block text-gray-700 text-sm font-semibold mb-2" for="apellido"> Apellido </label>
-                <input
-                  class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                  id="apellido"
-                  type="text"
-                  placeholder="Apellido"
-                />
-                <div class="mb-4 mt-6">
-                  <label class="block text-gray-700 text-sm font-semibold mb-2" for="edad"> Edad </label>
-                  <input
-                    class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                    id="edad"
-                    type="number" min="21" max="65"
-                    placeholder="Edad"
-                  />
-                <div class="mb-4 mt-6">
-                  <label class="block text-gray-700 text-sm font-semibold mb-2" for="email"> Correo Electrónico </label>
-                  <input
-                    class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                    id="email"
-                    type="text"
-                    placeholder="Email "
-                  />
+            </div>
+
+            <div class="mb-4 mt-6">
+              <label class="block text-gray-700 text-sm font-semibold mb-2" for="apellido"> Apellido </label>
+              <input
+                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                id="apellido"
+                type="text"
+                placeholder="Apellido"
+                formControlName="apellido"
+              />
+            </div>
+
+            <div class="mb-4 mt-6">
+              <label class="block text-gray-700 text-sm font-semibold mb-2" for="edad"> Edad </label>
+              <input
+                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                id="edad"
+                type="number" min="21" max="65"
+                placeholder="Edad"
+                formControlName="edad"
+               />
+            </div>
+            <div class="mb-4 mt-6">
+              <label class="block text-gray-700 text-sm font-semibold mb-2" for="email"> Correo Electrónico </label>
+              <input
+                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+                id="email"
+                type="text"
+                placeholder="Email "
+                formControlName="correoElectronico"
+              />
+            </div>
             <div class="mb-4 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="username"> Username  </label>
               <input
@@ -53,41 +62,41 @@
                 id="username"
                 type="text"
                 placeholder="Username"
+                formControlName="username"
               />
             </div>
             <div class="mb-6 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="tipo"> Tipo Administrador </label>
-              <input 
-                type="text" 
-                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
-                list="browsers"
-                placeholder="Tipo administrador"/>
-                <datalist id="browsers">
-                    <option>Proveedor</option>
-                    <option>Administrador del sistema</option>
-                </datalist>
+              <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
+                id="browsers" 
+                placeholder="Tipo Administrador"
+                formControlName="tipoAdministradorId">
+                    <option value="1" type="number">Administrador del sistema</option>
+                    <option value="2" type="number">Proveedor</option>
+              </select>
             </div>
             <div class="mb-6 mt-6">
               <label class="block text-gray-700 text-sm font-semibold mb-2" for="password"> Password </label>
               <input
                 class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
                 id="password"
-                type="password"
+                type="text"
                 placeholder="Password"
+                formControlName="password"
               />
             </div>
             
             <div class="flex w-full mt-6">
               <button
                 class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-                type="button"
-                [routerLink]="['/adminhome']"
+                type="submit"
+                
               >
                 Registrar
               </button>
             </div>
-        </div>
+          </form>  
       </div>
     </div>
   </div>
-  
+</div>
