--- a/src/app/components/dashboard/dashboard-admin/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-index/dashboard-index.component.html
@@ -2,7 +2,7 @@
 <div>
 	<div style="text-align: center;">
 		<h1 class="mb-3 font-medium">ADMINISTRADOR</h1>
-		
+		<h2 class="mb-3 font-medium">{{administrator.nombre}} {{administrator.apellido}}</h2>
 	</div>
 	<div class="flex justify-between flex-wrap">
 		<h2 class="mb-3 font-medium">LISTA ADMINISTRADORES DEL SISTEMA</h2> 
