Realizando mejoras en las interfaces

--- a/src/app/components/product/product-details/product-details.component.html
+++ b/src/app/components/product/product-details/product-details.component.html
@@ -2,69 +2,42 @@
   <div class="container">
     <div class="grid grid-cols-12 gap-8">
       <div class="col-span-12 md:col-span-7 xl:col-span-8 border p-5">
-        <a href="javascript:void(0)" class="category text-primary inline-block mb-5">Información del Producto</a>
-        <h1 class="_title font-medium">Potential analysis - digitization for manufacturing companies</h1>
+        <h1 class="_title font-medium">Información del Producto</h1>
         
-        <img class="w-full" src="assets/images/products/details.jpg" alt="img not found" />
+        <img class="w-full" src="assets/logo_trendy.png" alt="img not found" />
         <div class="ll-content mt-8">
-          <h5>
-            We provide you with process mechanics for plastics and rubber technology (m / f / d) from Spain. Our candidates speak English
-            and would like to continue their respective careers in the plastics country.
-          </h5>
-          <h6>Problem</h6>
+          <h2>
+            Nombre del Producto: 
+          </h2>
+          <h2>Descripción del Producto:</h2>
           <p>
             It is difficult to find talented & motivated process mechanics in Germany. Lateral entrants from Germany can work, but the best
             are those talents who have learned the process from scratch and can & want to imagine a career with it.
           </p>
-          <h6>General situation:</h6>
+          <h2>Colores disponibles:</h2>
           <p>
-            Many production companies in plastics processing in Germany have been experiencing a shortage of talented and motivated process
-            mechanics for years. Only a few small and medium-sized companies actively use the talent pool from other EU countries. Many
-            process mechanics in other EU countries would like to continue their careers in Germany. Small and medium-sized teams in
-            particular offer such talents a warm atmosphere and the chance to feel at home.
+            It is difficult to find talented & motivated process mechanics in Germany. Lateral entrants from Germany can work, but the best
+            are those talents who have learned the process from scratch and can & want to imagine a career with it.
           </p>
-          <h6>Our solution:</h6>
+          <h2>Tallas Disponibles:</h2>
           <p>
-            We are looking for suitable process mechanics from Spain who speak good English according to your requirement profile and
-            support you in welcoming your ideal candidate to Germany even during the pandemic. Basically, the European population under the
-            age of 30, and especially those with an affinity for technology and machines, speak good to very good English. You should
-            benefit.
+            It is difficult to find talented & motivated process mechanics in Germany. Lateral entrants from Germany can work, but the best
+            are those talents who have learned the process from scratch and can & want to imagine a career with it.
           </p>
-          <h6>What you get with this booking and for this price:</h6>
-          <ul>
-            <li>
-              The successful placement of a process mechanic (m / f / d) according to your requirement profile for permanent employment
-            </li>
-            <li>The placement of a process mechanic (m / f / d) exclusively from Spain with a work permit for foeign countries</li>
-            <li>Placement of talents with a good command of English</li>
-          </ul>
-          <blockquote>
-            And talk about chicken nuggets and bacon BBQ souces. AND talk about chicken nuggets and bacon BBQ souces. AND talk about chicken
-            nuggets and bacon BBQ souces
-          </blockquote>
-          <h6>Requirements:</h6>
-          <ol>
-            <li>
-              You have to create the prerequisites in the factory & company to integrate a process mechanic who initially only speaks
-              English.
-            </li>
-            <li>We need a realistic requirement profile that takes into account the professional or differences in training in Spain.</li>
-          </ol>
-          <blockquote>
-            And talk about chicken nuggets and bacon BBQ souces. AND talk about chicken nuggets and bacon BBQ souces. AND talk about chicken
-            nuggets and bacon BBQ souces
-          </blockquote>
         </div>
       </div>
       <div class="col-span-12 md:col-span-5 xl:col-span-4">
         <div class="border">
           <div class="border-b text-center pt-10 pb-10">
-            <div class="text-accent text-4xl font-semibold">€3,000.00</div>
-            <div class="font-medium text-lg mt-3 text-gray-400 tracking-wider">Price</div>
+            <div class="text-accent text-4xl font-semibold">Bs. 150.00</div>
+            <div class="font-medium text-lg mt-3 text-gray-400 tracking-wider">Precio</div>
+            <img class="center" src=" https://cdn-icons-png.flaticon.com/512/1424/1424818.png" style="width: 100px; height: 100px;" alt="img not found" />
           </div>
-
         </div>
       </div>
+     
     </div>
   </div>
 </div>
+
+
